flex/flex-tests/testData/js2_highlighting/InvokedVariableTypeMismatch.js2
class Foo { function Foo() {
    var prop:Object = new Object();
    <error descr="Method expression is not of Function type">prop</error>();// error

    var cl:Class = Boolean;
    var z:int = <error>cl("true")</error>;
    var z2:Boolean = cl("true");
    z = new cl();

    var fn:Function = function():void{};
    fn();// this works

    <error descr="Method expression is not of Function type">new Dictionary()</error>()
    <error descr="Method expression is not of Function type">new Dictionary2()</error>()
}}

class Dictionary {
    function Dictionary() {}
}

class Dictionary2 {}